<resources>
    <string name="app_name">AML</string>
    <string name="alert_title_default">Alert</string>
    <string name="no_internet">No internet connection</string>
    <string name="alert_ok">Ok</string>
    <string name="tab_1">Home</string>
    <string name="tab_2">My Services</string>
    <string name="tab_3">My Product</string>
    <string name="tab_4">Track</string>
    <string name="tab_5">Account</string>

    <string-array name="user_type">
        <item>Individual</item>
        <item>Retailer</item>
        <item>Service Man</item>
    </string-array>

    <string name="api_key">AIzaSyBpIbBO8LJO7QOfrGNfimoCDYB4gLR-5g4</string>
    <string name="title_activity_service_selection">ServiceSelectionActivity</string>
    <string name="rs">\u20B9</string>
    <string name="price">\u20B9.9000</string>
    <string name="et_error">Field should not be empty</string>
    <string name="er_server">Server not responding</string>
    <string name="error_no_cart_items">No items in cart</string>
    <string name="qty">Qty</string>
    <string name="submit">Order</string>
    <string name="get_quote">Get Quote</string>
    <string name="product_name">Product Name</string>
    <string name="description">Description</string>
    <string name="GPSAlertDialogTitle">Alert Location</string>
    <string name="GPSAlertDialogMessage">Need location to be enabled</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>

</resources>
